[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clientliberator"
version = "0.0.1"
authors = [
    { name = "QuatschVirus", email = "quatschvirus@gmail.com" }
]
description = "A manager for automatically importing and mapping client libraries with Node in a Flask app"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "jsonschema ~=4.23.0",
    "click ==8.1.7",
    "flask ~=3.1.1",
    "requests ~=2.32.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
clientliberator = "clientliberator.cli:main"